--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "modern-normalize": "^1.1.0",
+    "nanoid": "^3.1.23",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-debounce-input": "^3.2.3",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
