Change homepage path

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "goit-react-hw-02-phonebook",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/shvyrkova-maria/goit-react-hw-02-phonebook",
+  "homepage": "https://shvyrkova-maria.github.io/goit-react-hw-02-phonebook",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/shvyrkova-maria/goit-react-hw-02-phonebook.git"
